resolver/kustomize/resolver/overlays/local/resolver/add-ca.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: did-resolver
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: resolver-ca-cert
      containers:
        - name: did-resolver
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/did-resolver/tls
