resolver/kustomize/resolver/overlays/local/resolver/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: did-resolver
  labels:
    app: did-resolver
spec:
  tls:
  - hosts:
      - DID_RESOLVER_SERVICE_NAME.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: DID_RESOLVER_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: DID_RESOLVER_SERVICE_NAME
            port:
              name: http
